Layout: Fixed iframe layout issues

--- a/src/components/VideoPlayer.css
+++ b/src/components/VideoPlayer.css
@@ -1,18 +1,28 @@
 iframe {
   width: 100%;
-  height: 1000px;
+  height: 800px;
   padding: 0;
   margin: 0;
   display: block;
   line-height: 0px;
+  overflow-y: hidden;
 }
 
 /* Media Queries */
+@media only screen and (max-width: 1920px) {
+  iframe {
+    width: 100vw;
+    height: 1000px;
+    margin: 0;
+    padding: 0;
+    display: block;
+  }
+}
 
 @media only screen and (max-width: 1200px) {
   iframe {
-    width: 100%;
-    height: 1000px;
+    width: 100vw;
+    height: 650px;
     margin: 0;
     padding: 0;
     display: block;
@@ -21,20 +31,18 @@ iframe {
 
 @media only screen and (max-width: 1024px) {
   iframe {
-    width: 100%;
-    height: 1000px;
+    width: 100vw;
+    height: 600px;
     margin: 0;
     padding: 0;
     display: block;
-    line-height: 0px;
-    overflow-y: hidden;
   }
 }
 
 @media only screen and (max-width: 768px) {
   iframe {
     width: 100%;
-    height: 350px;
+    height: 450px;
     margin: 0;
     padding: 0;
     display: block;
@@ -44,7 +52,7 @@ iframe {
 @media only screen and (max-width: 500px) {
   iframe {
     width: 100%;
-    height: 250px;
+    height: 300px;
     display: block;
   }
 }
